labs/lab_k8s/monitor/prometheus_ingress.yml
# helm install prometheus stable/prometheus -n monitoring
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.contour.sanjacinto.cf-app.com 
    http:
      paths:
        - backend:
            serviceName: prometheus-server
            servicePort: 80
